--- a/index.css
+++ b/index.css
@@ -1,29 +1,19 @@
 body{
     font-family: 'Tiro Devanagari Marathi', serif;
+    
 }
 h1{
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
-.name-edit{
+.name-style{
   color: orange;
 }
 .box1{
-  text-align: justify;
-  text-transform: capitalize;
-  border: 1px solid white;
-  margin: 2px;
-  width: 48%;
-  float: left;
-}
-.box2{
-  text-align: justify;
-  text-transform: capitalize;
-  border: 1px solid white;
-  margin: 2px;
-  width: 48%;
-  float: left;
-}
-.box2 img{
+  width: 40%;
+ 
+  float: left;}
+.box1 img{
   width: 100%;
-
 }
+  
+
